objects/Proposal_Tasks__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <inlineHelpText>Additional Notes</inlineHelpText>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of the Task</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>Date the task is due</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_or_Name_from_RFP_RFQ__c</fullName>
        <inlineHelpText>Item number or name of the section in the RFP/RFQ the person is responsible for</inlineHelpText>
        <label>Item # or Name from RFP/RFQ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>Proposal_Request__r.Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonResponsibleID__c</fullName>
        <formula>IF(Person_Responsible__r.Id= $User.Id ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PersonResponsibleID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person responsible for the task</inlineHelpText>
        <label>Person Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Responsibility_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProposalTaskWorkflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field. Used to trigger various Proposal Task workflow rules. Set by trigger ProposalRequest.</description>
        <label>ProposalTaskWorkflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_Due_Date__c</fullName>
        <formula>Proposal_Request__r.Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Due Date of the Proposal- from the Proposal Request listed</inlineHelpText>
        <label>Proposal Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Proposal_Request__c</fullName>
        <inlineHelpText>The proposal request (RFP/RFQ) that the task is associated to</inlineHelpText>
        <label>Proposal Request</label>
        <referenceTo>Proposal_Request__c</referenceTo>
        <relationshipName>Responsibility_Matrix</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of the Task</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needed</fullName>
                    <default>true</default>
                    <label>Needed</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Proposal Task</label>
    <nameField>
        <displayFormat>T-{00000000}</displayFormat>
        <label>Proposal Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>